--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
   "name": "jethromay.com",
   "version": "1.0.0",
   "description": "",
-  "main": "postcss.config.js",
   "scripts": {
-    "dev": "npx parcel src/index.html"
+    "build": "npx -p parcel-bundler parcel build index.html "
   },
   "keywords": [],
   "author": "",
@@ -13,5 +12,9 @@
     "autoprefixer": "^10.4.2",
     "postcss": "^8.4.6",
     "tailwindcss": "^3.0.23"
+  },
+  "dependencies": {
+    "parcel": "^2.0.0-nightly.1002",
+    "parcel-bundler": "^1.12.5"
   }
 }
