--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "build": "npx -p parcel-bundler parcel build index.html "
+    "build": "npx -p parcel-bundler parcel build src/index.html "
   },
   "keywords": [],
   "author": "",
