--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "build": "npx -p parcel-bundler parcel build src/index.html "
+    "build": "npx -p parcel-bundler parcel build index.html "
   },
   "keywords": [],
-  "author": "",
+  "author": "Jethro May",
   "license": "ISC",
   "devDependencies": {
     "autoprefixer": "^10.4.2",
